fix(portal-next): text overflow in API documentation
(cherry picked from commit fc80f618a56a60bf8f0e02a0f62d1066d66afefa)

--- a/gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
@@ -44,6 +44,12 @@ table {
     font-weight: 300;
   }
 
+  td {
+    overflow-wrap: break-word;
+    white-space: normal;
+    word-break: break-all;
+  }
+
   th,
   td {
     height: 32px;
@@ -97,4 +103,9 @@ table {
   &--caution {
     color: var(--gio-marked-alert-icon-caution-color, inherit);
   }
+}
+
+p {
+  word-break: break-word;
+  word-break: break-all;
 }
